Bug 1354924 - Fix mousewheel multiplier prefs for external mouse devices on OS X. r=botond, a=gchang

The code in the OS X widget was calling ReceiveInputEvent on IAPZCTreeManager
with a ScrollWheelInput, which would bypass the multiplier code. This modifies
the widget to use a WidgetWheelEvent instead, so that it goes through the
IAPZCTreeManager multiplier handling for wheel inputs. Other platforms already
send wheel events in WidgetWheelEvent format so they don't have this problem.

MozReview-Commit-ID: 5gOOGnfD87W